# fennec-virtual-machine

./: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  conditional.cpp  instruction.cpp  instruction.h  interpreter.cpp  interpreter.h  literal.cpp  main.cpp  register.cpp
includes/: Lexer.h  Parser.h  instruction.h
src/: Lexer.cpp  Parser.cpp  conditional.cpp  fasm_node.cpp  instruction.cpp  interpreter.cpp  literal.cpp  register.cpp  type_table.cpp
